# data-structures-and-algorithms

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  CMakeSettings.json  CODING_GUIDELINES.md  CODING_GUILDELINES.md  CONTRIBUTING.md  DataStructuresAndAlgorithms.sln  Doxyfile  Doxyfile--gh-pages  Main.cpp  README.md  SETUP.md  TODO.md  mkdocs.yml
Algorithms.Main/: Algorithms.Main.csproj  Program.cs
Algorithms.Test/: Algorithms.Test.csproj
Base.Lib/: Base.cs
Base.Main/: Base.Main.csproj  Program.cs
Base.Test/: Base.Test.cs  Base.Test.csproj
DataStructures.Lib/: Class1.cs
DataStructures.Main/: Program.cs
DataStructures.Test/: Array.Test.cs
Extensions/: List.cs
Graph/: DirectedGraph.cs
MSVC/: DataStructuresAndAlgorithms.sln
Scripts/: Unix-Build.sh  Unix-CMakeBuild.sh  Unix-Clean.sh  Unix-Run.sh  build-unix.bat  doxygen-docgen.bat  run-unix.bat  run.bat
Src/: CMakeLists.txt  Main.cpp
Src/Algorithms/: Algo.cpp  CMakeLists.txt  Documentation.h
Src/Algorithms/DP/: CMakeLists.txt  DP.cpp  DP.h  MainDP.cpp
Src/Algorithms/Greedy/: CMakeLists.txt  Greedy.cpp  Greedy.h  MainGreedy.cpp
Src/Algorithms/Numbers/: BigInteger.cpp  BigInteger.h  CMakeLists.txt  Factorization.cpp  Factorization.h  Fibonacci.cpp  Fibonacci.h  MainNumbers.cpp  Math.cpp  Math.h  RandomNumber.cpp  RandomNumber.h
Src/Algorithms/Recursion/: CMakeLists.txt  MainRecursion.cpp  Recursion.cpp  Recursion.h
Src/Algorithms/SearchSort/: CMakeLists.txt  MainSearchSort.cpp  Search.cpp  Search.h  Sort.cpp  Sort.h
Src/DataStructures/: CMakeLists.txt  Documentation.h  Ds.cpp  MainDataStructures.cpp
Src/DataStructures/Array/: Array.cpp  Array.h  CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  IArray.h  MainArray.cpp
Src/DataStructures/BigNumber/: BigNumber.cpp  BigNumber.h  CMakeLists.txt  MainBigNumber.cpp
Src/DataStructures/Geometry/: CMakeLists.txt  Direction.h  MainGeometry.cpp  Matrix.cpp  Matrix.h  PointNd.h  Vector2d.cpp  Vector2d.h  Vector3d.cpp  Vector3d.h  VectorNd.cpp  VectorNd.h
Src/DataStructures/Graph/: CMakeLists.txt  Edge.cpp  Edge.h  MainGraph.cpp  Vertex.cpp  Vertex.h  WeightedGraph.cpp  WeightedGraph.h  WeightedGraphNode.cpp  WeightedGraphNode.h
Src/DataStructures/LinearAlgebra/: CMakeLists.txt  MainLinearAlgebra.cpp  Matrix.cpp  Matrix.h  Matrix2d.cpp  Matrix2d.h  MatrixNd.cpp  MatrixNd.h  Vector.cpp  Vector.h  Vector2d.cpp  Vector2d.h  Vector3d.cpp  Vector3d.h  VectorNd.cpp  VectorNd.h
Src/DataStructures/List/: CMakeLists.txt  DoubleLinkedList.cpp  DoubleLinkedList.h  DoubleLinkedListNode.cpp  DoubleLinkedListNode.h  MainList.cpp  SingleLinkedList.cpp  SingleLinkedList.h  SingleLinkedListNode.cpp  SingleLinkedListNode.h
Src/DataStructures/Node/: CMakeLists.txt  MainNode.cpp  Node.cpp  Node.h
Src/DataStructures/Queue/: CMakeLists.txt  MainQueue.cpp  Queue.cpp  Queue.h  QueueNode.cpp  QueueNode.h
Src/DataStructures/Stack/: CMakeLists.txt  MainStack.cpp  Stack.cpp  Stack.h  StackNode.cpp  StackNode.h
Src/DataStructures/String/: CMakeLists.txt  MainString.cpp  MyString.cpp  MyString.h  String.cpp  String.h  SuffixTree.cpp  SuffixTree.h  Trie.cpp  Trie.h
Src/DataStructures/Tree/: BTree.cpp  BTree.h  BinarySearchTree.cpp  BinarySearchTree.h  BinaryTree.cpp  BinaryTree.h  BinaryTreeNode.cpp  BinaryTreeNode.h  CMakeLists.txt  MainTree.cpp  NaryTree.cpp  NaryTree.h
Src/Exception/: AccessViolationException.h  IException.h  IndexOutOfBoundsException.h  MemoryAllocationException.h  NotImplementedException.h
Src/Headers/: Bits.h  CMakeLists.txt  Comparator.h  DefaultHeaders.h  Exceptions.h  LibHeaders.h  OpCodes.h  ProjectInfo.h  StandardHeaders.h  Utilities.cpp  Utilities.h
Src/Headers/Exceptions/: Exceptions.h
Src/Logging/: BaseLogging.cpp  BaseLogging.h  Logging.cpp  Logging.h  MainLogging.cpp
Src/OldLogging/: BaseLogging.cpp  CMakeLists.txt
Test/: CMakeLists.txt  OldCMakeLists.txt  Test-DataStructuresAndAlgorithms.cpp
Test/Extensions.Test/: Extensions.Test.csproj  List.cs
Test/Src/Algorithms/: Test-Algorithms.cpp
Test/Src/Algorithms/Numbers/: Test-BigInteger.cpp  Test-Factorization.cpp  Test-Fibonacci.cpp  Test-Math.cpp  TestFactorization.cpp  TestFibonacci.cpp
Test/Src/Algorithms/SearchSort/: Test-Search.cpp  Test-Sort.cpp
Test/Src/DataStructures/: Test-DataStructures.cpp  TestSingleLinkedList.cpp
Test/Src/DataStructures/Array/: Test-Array.cpp  Test-DynamicArray.cpp
Test/Src/DataStructures/BigNumber/: Test-BigNumber.cpp
Test/Src/DataStructures/Geometry/: Test-Vector2d.cpp  Test-Vector3d.cpp  Test-VectorNd.cpp
Test/Src/DataStructures/Graph/: Test-WeightedGraph.cpp
Test/Src/DataStructures/LinearAlgebra/: Test-Vector2d.cpp  Test-Vector3d.cpp  Test-VectorNd.cpp
Test/Src/DataStructures/List/: Test-SingleLinkedList.cpp  Test-SingleLinkedListNode.cpp
Test/Src/DataStructures/Node/: Test-Node.cpp
Test/Src/DataStructures/Queue/: Test-Queue.cpp
Test/Src/DataStructures/Stack/: Test-Stack.cpp
Test/Src/DataStructures/String/: Test-String.cpp
Test/Src/DataStructures/Tree/: Test-BinaryTree.cpp
Test/Src/Headers/: TimingHeader.h
docs/: index.md
doxygen/: classes.html  dir_000000_000004.html  dir_088b23c29c7df2def34bfcf326deb27a.html  dir_38bf67be8bb7fd3a86bcf08d720519a7.html  dir_413f4e031a85da0d68269c6fd2f76e1c_dep.md5  functions_func.html  (+6 more)
src/: CMakeLists.txt  main.cpp
src/algorithms/: CMakeLists.txt  algo.cpp
src/algorithms/numbers/: CMakeLists.txt  big_integer.cpp  big_integer.h  numbers_main.cpp  random_number.cpp  random_number.h
src/data_structures/: CMakeLists.txt
src/data_structures/list/: CMakeLists.txt  list_main.cpp  single_linked_list.cpp  single_linked_list.h  single_linked_list_node.cpp  single_linked_list_node.h
src/headers/: default_headers.h  utilities.h
src/logging/: logging.cpp  logging.h
test/: CMakeLists.txt  mix_test.cpp
test/src/: single_linked_list_node_test.cpp  test_single_linked_list.cpp  test_single_linked_list_node.cpp
test/src/algorithms/: test_big_integer.cpp
test/src/data_structures/: test_single_linked_list.cpp  test_single_linked_list_node.cpp
(+393 files in other folders)
